--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
     <main>
         <section class="summary">
             <h2>Summary</h2>
-            <p><strong>Issues Found:</strong> 5</p>
-            <p><strong>Pages Scanned:</strong> 3</p>
+            <p><strong>Issues Found:</strong> 0</p>
+            <p><strong>Pages Scanned:</strong> 0</p>
         </section>
         <section class="issues">
             <h2>Accessibility Issues</h2>
             <ul>
-                <li>Missing alt text on images (<span id="altImageIssueCount"></span> instances)</li>
-                <li>Low contrast text (<span id="lowContrastCount"></span> instances)</li>
-                <li>Missing form labels (2 instances)</li>
+                <li>Missing alt text on images (<span id="altImageIssueCount">0</span> instances)</li>
+                <li>Low contrast text (<span id="lowContrastCount">0</span> instances)</li>
+                <li>Missing form labels (<span id="missingLabelsCount">0</span> instances)</li>
             </ul>
         </section>
         <button id="scan-button">Run Accessibility Scan</button>
