addding pdf generator basics

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <footer>
         <p>&copy; 2025 Accessibility Tracker. Empowering small businesses.</p>
     </footer>
-    <script src="main.js" ></script>
+    <script src="libs/jspdf.umd.min.js"></script>
+    <script type="module" src="main.js" ></script>
 </body>
 </html>
