--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <li>Missing alt text on images (<span id="altImageIssueCount">0</span> instances)</li>
                 <li>Low contrast text (<span id="lowContrastCount">0</span> instances)</li>
                 <li>Missing form labels (<span id="missingLabelsCount">0</span> instances)</li>
+                <a id="download-report" style="display: none; cursor: pointer; color: blue; text-decoration: underline;">Download Full Report</a>
             </ul>
         </section>
         <button id="scan-button">Run Accessibility Scan</button>
