--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Accessibility Tracker</h1>
+        <h1>Zentry Accessibility</h1>
         <p>Helping small businesses improve their web accessibility.</p>
     </header>
     <main>
@@ -29,7 +29,7 @@
         <button id="scan-button">Run Accessibility Scan</button>
     </main>
     <footer>
-        <p>&copy; 2025 Accessibility Tracker. Empowering small businesses.</p>
+        <p>&copy; 2025 Zentry Accessibility. Empowering small businesses.</p>
     </footer>
     <script src="libs/jspdf.umd.min.js"></script>
     <script type="module" src="main.js" ></script>
